fix bottom container spacing

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ margin-bottom: 2%;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 25%;
+  width:50%;
 }
 
 /* .bottom-container a:nth-child(2){
